--- a/dev/index.html
+++ b/dev/index.html
@@ -88,7 +88,7 @@
 	
 	<header id="zeppelin" role="banner" class="z_animated">
 		<h6><a href="http://registerguard.com">The Register-Guard</a></h6>
-		<p><a href="http://registerguard.com/rg/life/cannabisculture/">Trump's first 100 days</a></p>
+		<p><a href="http://registerguard.com/rg/news/">Politics</a></p>
 	</header>
 	
 	<div id="outer">
@@ -124,15 +124,15 @@
 			</header>
 			
 			<div class="inner text">
-				<p>The first 100 days of a new term has been seen as an early benchmark for presidents since 1933 when Franklin D. Roosevelt passed a flurry of bills in that time. During the 2016 campaign, then-candidate Donald Trump issued a <a href="https://assets.donaldjtrump.com/_landings/contract/O-TRU-102316-Contractv02.pdf" target="_blank">“100-day action plan to Make America Great Again.”</a></p>
+				<p class="dropcap">The first 100 days of a new term has been seen as an early benchmark for presidents since 1933 when Franklin D. Roosevelt passed a flurry of bills in that time. During the 2016 campaign, then-candidate Donald Trump issued a <a href="https://assets.donaldjtrump.com/_landings/contract/O-TRU-102316-Contractv02.pdf" target="_blank">“100-day action plan to Make America Great Again”</a> contract for his supporters.</p>
 				<figure class="imgr">
 					<img src="media/trump.jpg">
-					<figcaption>The Associated Press</figcaption>
+					<figcaption>AP</figcaption>
 				</figure>
 				<p>Conversations with a dozen voters from Oregon’s Fourth Congressional District reveal a range of emotions and perspectives on Trump’s first 100 days. More conservative voters remain solidly behind Trump despite early stumbles, while those who did not support him remain energized as they develop long-term strategies for action.</p>
 				<p>An <a href="http://www.dailykos.com/story/2017/1/30/1627319/-Daily-Kos-Elections-presents-the-2016-presidential-election-results-by-congressional-district" target="_blank">analysis</a> of the 2016 presidential election by Daily Kos found that this district was the most closely divided in the United States. Hillary Clinton prevailed over Trump, 46.1 percent to 46.0 percent — a mere 554 votes.</p>
 				<p>The divisions remain deep. Linda Lynch, president of the Lane County League of Women Voters, noted that civility is often in short supply. As the country moves past the 100-day mark, the question of whether those divisions begin to close, or continue to widen, is open for debate.</p>
-				<div class="breaker">–</div>
+				<hr class="breaker">
 			</div>
 			
 		</div><!-- /.header -->
@@ -145,7 +145,7 @@
 					<div class="about second">
 						<h3 class="name">Linda Lynch</h3>
 						<div>
-							<p class="meta">Eugene, age 71 – Lynch is president of Lane County Chapter of the League of Women Voters.</p>
+							<p class="meta"><span style="font-weight:900;">Eugene,</span> age 71 – Lynch is president of Lane County Chapter of the League of Women Voters.</p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">It’s become a popular campaign effort to say, ‘In my first 100 days, I will … .’ And then confronted by the realities of office and checks and balances in government, you find it is pretty hard to get a lot in 100 days, which is probably a good thing.”</p>
@@ -171,7 +171,7 @@
 					<div class="about first">
 						<h3 class="name">Alan Zundel</h3>
 						<div>
-							<p class="meta">Eugene, age 64 – Zundel is the co-chair of the Pacific Green Party of Oregon. He ran for Oregon Secretary of State in 2016.</p>
+							<p class="meta"><span style="font-weight:900;">Eugene,</span> age 64 – Zundel is the co-chair of the Pacific Green Party of Oregon. He ran for Oregon Secretary of State in 2016.</p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">I think his overriding objective is to get respect for himself. That seems to be his motivator ... . I don’t see a real political program there because he changes all the time. And he takes pride in that, as though it’s a virtue to not to have any guiding philosophy or consistency. I don’t think that works too well when you are the leader of a major nation.”</p>
@@ -197,7 +197,7 @@
 					<div class="about second">
 						<h3 class="name">Ellie Keeland</h3>
 						<div>
-							<p class="meta">Reedsport, age 69 – Keeland is a chainsaw carver and owner of The Log Lot.</p>
+							<p class="meta"><span style="font-weight:900;">Reedsport,</span> age 69 – Keeland is a chainsaw carver and owner of The Log Lot.</p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">He likes guns, he likes money, he likes private enterprise — the things we were built on. A good American. He’s American. A true American. He didn’t do it for the wage, that’s for sure. He didn’t need the power — he’s got plenty. He loves America.”</p>
@@ -222,7 +222,7 @@
 					<div class="about first">
 						<h3 class="name">Jan Dial</h3>
 						<div>
-							<p class="meta">Springfield – Dial was a door gunner during the Vietnam War.</p>
+							<p class="meta"><span style="font-weight:900;">Springfield</span> – Dial was a door gunner during the Vietnam War.</p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">I think the people who voted for him because they were disillusioned and discouraged are going to be even more so in 200, 300 days from now. I think we’ll be in a war again. I don’t think the man has the emotional stability, the intelligence, the morals to be in that place. The ethics. I don’t have high expectations of his having a productive and successful administration for our nation.”</p>
@@ -247,7 +247,7 @@
 					<div class="about second">
 						<h3 class="name">Don Crouse</h3>
 						<div>
-							<p class="meta">Springfield, age 65 – Crouse is a retired truck driver and Vietnam War veteran.</p>
+							<p class="meta"><span style="font-weight:900;">Springfield,</span> age 65 – Crouse is a retired truck driver and Vietnam War veteran.</p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">Personally, I think he’s doing a helluva fine job. He’s keeping up with his promises. The biggest problem he has is people stabbing him in the back, his own party considered. We hired them to work for us, not for themselves. I don’t care how many of them want to make themselves millionaires. Take care of people in the United States. Americans.</p>
@@ -273,7 +273,7 @@
 					<div class="about first">
 						<h3 class="name">Robin Meacher</h3>
 						<div>
-							<p class="meta">Eugene, age 30 – Meacher is a lawyer working on issues with local environmental organizations.</p>
+							<p class="meta"><span style="font-weight:900;">Eugene,</span> age 30 – Meacher is a lawyer working on issues with local environmental organizations.</p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">I think that working locally, not just in Eugene, but within our states and with our communities, is where we are going to be able to really combat whatever this willy-nilly administration continues to do.”</p>
@@ -298,7 +298,7 @@
 					<div class="about second">
 						<h3 class="name">Dallas Petenbrink</h3>
 						<div>
-							<p class="meta">North Bend, age 41 – Petenbrink is a Coos County Republican Precinct Committee Person. He moved to Oregon from Louisiana in 1992.</p>
+							<p class="meta"><span style="font-weight:900;">North Bend,</span> age 41 – Petenbrink is a Coos County Republican Precinct Committee Person. He moved to Oregon from Louisiana in 1992.</p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">I don’t think anybody is ever prepared to be president of the United States. I don’t think you can be. The weight of the office has got to be overwhelming. And the learning curve is huge.”</p>
@@ -324,7 +324,7 @@
 					<div class="about first">
 						<h3 class="name">Ericka Thessen</h3>
 						<div>
-							<p class="meta">Eugene, age 43 – Thessen is a member of Indivisible Eugene and NOW. She was a regular voter but not politically active until Trump was elected. </p>
+							<p class="meta"><span style="font-weight:900;">Eugene,</span> age 43 – Thessen is a member of Indivisible Eugene and NOW. She was a regular voter but not politically active until Trump was elected. </p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">A lot of us are looking at it as blessing and an opportunity that we can be better. We have to do better as a nation for us to be what we want to be. The great American story is that we are going to take this thing and we’ll make something amazing out of it. We are going to pull ourselves up by the bootstraps — isn’t that kind of the American way ... ?</p>
@@ -350,7 +350,7 @@
 					<div class="about second">
 						<h3 class="name">Rodney Schilling</h3>
 						<div>
-							<p class="meta">Hauser – Schilling is the chairman of the Coos County Republican Central Committee.</p>
+							<p class="meta"><span style="font-weight:900;">Hauser</span> – Schilling is the chairman of the Coos County Republican Central Committee.</p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">He’s a businessman. I was a businessman. And I think unraveling the laws and rules and many government agencies that are holding business down and keeping our GDP at the lowest it’s been in years and years is going to be one of the best things he can do.”</p>
@@ -376,7 +376,7 @@
 					<div class="about first">
 						<h3 class="name">Silver Mogart</h3>
 						<div>
-							<p class="meta">Eugene, age 42 – Mogart is concerned community member, father and comic.</p>
+							<p class="meta"><span style="font-weight:900;">Eugene,</span> age 42 – Mogart is concerned community member, father and comic.</p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">He’s in. We live with that. There’s things that need to happen, there are people that are hurting and the rhetoric he has been putting out there has had a tremendous effect on a huge population of the United States. That should wake him up. That should bring him to a place where he’s thinking about the rest of America, not just those that voted for him. That’s what a good president would do. </p>
@@ -402,7 +402,7 @@
 					<div class="about second">
 						<h3 class="name">Teri Grier</h3>
 						<div>
-							<p class="meta">North Bend, age 52 – Grier is District 4 director of the Federation of Republican Women of Oregon. She ran for Oregon House 
+							<p class="meta"><span style="font-weight:900;">North Bend,</span> age 52 – Grier is District 4 director of the Federation of Republican Women of Oregon. She ran for Oregon House 
 of Representatives District 9, losing to Democrat Caddy McKeown.</p>
 						</div>
 						<div class="blockquote">
@@ -429,7 +429,7 @@ of Representatives District 9, losing to Democrat Caddy McKeown.</p>
 					<div class="about first">
 						<h3 class="name">Amanda Rudd</h3>
 						<div>
-							<p class="meta">Coquille, age 26 – Rudd grew up in Coquille and has returned to the community as a substitute teacher in area schools. She’s also on the City of Coquille Budget Committee.</p>
+							<p class="meta"><span style="font-weight:900;">Coquille,</span> age 26 – Rudd grew up in Coquille and has returned to the community as a substitute teacher in area schools. She’s also on the City of Coquille Budget Committee.</p>
 						</div>
 						<div class="blockquote">
 							<p class="quote">As somebody who is a teacher, and seeing the appointments that are being made with (new U.S. Education Secretary Betsy) DeVos, it’s concerning for myself and probably many others because I’m a huge advocate for public education, and she’s not. So it’s hard to say what’s going to happen.”</p>
@@ -463,8 +463,9 @@ of Representatives District 9, losing to Democrat Caddy McKeown.</p>
 	<script src="js/scripts.js"></script>
 	
 	<!-- [BEGIN] Analytics -->
-	<script>(function(r,g,n,e,w,s){r.GoogleAnalyticsObject=e;r[e]||(r[e]=function(){(r[e].q=r[e].q||[]).push(arguments)});r[e].l=+new Date;w=g.createElement(n);s=g.getElementsByTagName(n)[0];w.async=1;w.src='//www.google-analytics.com/analytics.js';s.parentNode.insertBefore(w,s)}(window,document,'script','ga'));ga('create','UA-882065-1','registerguard.com');ga('require','displayfeatures');ga('require','linkid','linkid.js');ga('send','pageview',{'dimension1':'Rob Denton','dimension2':'potshops','dimension3':'Apr 19, 2017 9:00AM','dimension4':'http://cloud.registerguard.com/marijuana/','dimension5':'Explore the growing number of active and proposed marijuana shops in Lane County'});</script>
+	<script>(function(r,g,n,e,w,s){r.GoogleAnalyticsObject=e;r[e]||(r[e]=function(){(r[e].q=r[e].q||[]).push(arguments)});r[e].l=+new Date;w=g.createElement(n);s=g.getElementsByTagName(n)[0];w.async=1;w.src='//www.google-analytics.com/analytics.js';s.parentNode.insertBefore(w,s)}(window,document,'script','ga'));ga('create','UA-882065-1','registerguard.com');ga('require','displayfeatures');ga('require','linkid','linkid.js');ga('send','pageview',{'dimension1':'Andy Nelson','dimension2':'politics','dimension3':'Apr 29, 2017 9:00AM','dimension4':'http://cloud.registerguard.com/trump-100-days/','dimension5':'100 days: 4th Congressional District residents on President Trump'});</script>
 		<!-- [END] Analytics -->
+	
 	
 </body>
 </html>
