--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -73,10 +73,8 @@
 						</div>
 					</div>
 					<figure class="first">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5413728205001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/HsNLJE6S5XY" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -99,10 +97,8 @@
 						</div>
 					</div>
 					<figure class="second">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5413724806001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Qj-GFtXyLGY" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -124,10 +120,8 @@
 						</div>
 					</div>
 					<figure class="first">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5413728201001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NoUqoV-sZC8" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -149,10 +143,8 @@
 						</div>
 					</div>
 					<figure class="second">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5413728203001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/TnXccbqqSBc" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -175,10 +167,8 @@
 						</div>
 					</div>
 					<figure class="first">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5413731648001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/llwHijv1vaM" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -200,10 +190,8 @@
 						</div>
 					</div>
 					<figure class="second">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5413722087001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-WAj7d6o6FY" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -226,10 +214,8 @@
 						</div>
 					</div>
 					<figure class="first">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5414637813001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pNLNFGJjKbo" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -252,10 +238,8 @@
 						</div>
 					</div>
 					<figure class="second">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5414637821001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JWhUnmge2So" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -278,10 +262,8 @@
 						</div>
 					</div>
 					<figure class="first">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5414637810001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ShXOmlT5-gk" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -304,10 +286,8 @@
 						</div>
 					</div>
 					<figure class="second">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5416223153001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/PWFlJLidx_U" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -331,10 +311,8 @@ of Representatives District 9, losing to Democrat Caddy McKeown.</p>
 						</div>
 					</div>
 					<figure class="first">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5413907070001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4zttS7Woz6Q" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
@@ -357,10 +335,8 @@ of Representatives District 9, losing to Democrat Caddy McKeown.</p>
 						</div>
 					</div>
 					<figure class="second">
-						<div style="display: block; position: relative; max-width: 100%;">
-							<div style="padding-top: 56.25%;">
-								<iframe src="//players.brightcove.net/4350897271001/BJQJcNGkZ_default/index.html?videoId=5413731643001" allowfullscreen webkitallowfullscreen mozallowfullscreen style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></iframe>
-							</div>
+						<div class="mm">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7BbCHepJ_kY" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</figure>
 				</div>
